@startuml
skinparam linetype ortho
skinparam classAttributeIconSize 0
hide empty members
left to right direction

class HeroAircraft
class EliteEnemy
class SuperEnemy

interface BulletFactory {
    + createBullets(x: int, y: int, speedX: int, speedY: int, power: int) : List<BaseBullet>
}

class EnemyBulletFactory implements BulletFactory {
    - shootNum : int
    - direction : int
    + EnemyBulletFactory(shootNum: int, direction: int)
}

class SuperEnemyBulletFactory extends EnemyBulletFactory {
    + SuperEnemyBulletFactory(shootNum: int, direction: int)
}

class HeroBulletFactory implements BulletFactory {
    - shootNum : int
    - direction : int
    + HeroBulletFactory(shootNum: int, direction: int)
}

abstract class BaseBullet
class EnemyBullet
class HeroBullet

BulletFactory <|.. EnemyBulletFactory
BulletFactory <|.. HeroBulletFactory
EnemyBulletFactory <|-- SuperEnemyBulletFactory

BulletFactory ..> BaseBullet : «create»
EnemyBulletFactory ..> EnemyBullet : «create»
HeroBulletFactory ..> HeroBullet : «create»

' Clients use their corresponding factories
HeroAircraft ..> HeroBulletFactory : «use»
EliteEnemy ..> EnemyBulletFactory : «use»
SuperEnemy ..> SuperEnemyBulletFactory : «use»

@enduml
